--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
     *****************
-    DONE BY:-   TUMMALA KETHAN
+    DONE BY:-   DIVAKER SINGH
     *****************
 -->
 
